Multiple bug fixes
-Shrunk Ace editor scroll bars so now the horizontal scroll bar isn't covering the last line of code
-Pressing the left arrow to move backwards by one character, now scrolls to the correct line and column of  code
-Pressing the left or right arrow to go forward/backward by one character, now stops automatic playback

--- a/core/public/css/st-styles.css
+++ b/core/public/css/st-styles.css
@@ -1255,3 +1255,7 @@ input[type=number]::-webkit-outer-spin-button {
 .questionNumberDiv{
     display: inline-flex;
 }
+
+.ace_scrollbar-h{
+    height: 16px;
+}
